# awflCloud

./: .gitmodules  AderDT.h  Array.h  CMakeLists.txt  Domain.h  Exchange.cpp  Exchange.h  FileIO.cpp  FileIO.h  Hydrostasis.h  Indexing.h  Initializer.cpp  Initializer.h  KokkosCore_config.h  LICENSE  Makefile  Makefile.fhqwhgads_cpu  Makefile.fhqwhgads_gpu  Makefile.summit  Makefile.summit_cpu  Makefile.summit_gpu  Makefile.thatchroof_cpu  Makefile.thatchroof_gpu  Parallel.h  Parser.cpp  Parser.h  Profiles.h  README.md  Riemann.h  SArray.h  Spatial_euler3d_cons_expl_cart_fv_Agrid.h  State.h  Temporal_ader.h  Tendencies.cpp  Tendencies.h  TendenciesThetaConsADER.cpp  TendenciesThetaConsADER.h  TendenciesThetaConsSD.cpp  TendenciesThetaConsSD.h  TendenciesThetaPrimADER.cpp  (+19 more)
inputs/: input_euler3d.yaml
qjrmsCode/: Exchange.cpp  Hydrostasis.h  Initializer.h  Makefile  Parser.cpp  README.md  Tendencies.cpp  TendenciesThetaConsADER.cpp  TendenciesThetaConsADER.h  TendenciesThetaPrimADER.cpp  TendenciesThetaPrimADER.h  TendenciesThetaPrimSD.h  TimeIntegrator.cpp  TransformMatrices.h  WenoLimiter.h  const.h  convert_to_netcdf4.py  driver.cpp  params.cpp  params.h  recon2dKernel.cpp
qjrmsCode/sage/: Euler_Characteristics.ipynb  c_utils.sage  generate_transform_source.sage
sage/: Euler_Characteristics.ipynb  c_utils.sage  derivatives.ipynb  generate_transform_source.sage  poly_utils.sage  quadrature_utils.sage  transformation_matrices.sage
sage/.ipynb_checkpoints/: Euler_Characteristics-checkpoint.ipynb
